install_data(
    ['avenc_aac.prs',
     'avenc_mp2.prs',
     'avenc_mpeg2video.prs',
     'avenc_wmav1.prs',
     'avenc_wmv1.prs',
     'GstFaac.prs',
     'GstFdkAacEnc.prs',
     'GstLameMP3Enc.prs',
     'GstMP4Mux.prs',
     'GstOpenh264Enc.prs',
     'GstTwoLame.prs',
     'GstVaapiEncodeH264.prs',
     'GstVaapiEncodeMpeg2.prs',
     'GstVoAacEnc.prs',
     'GstX264Enc.prs'],
    install_dir : rygel_presetdir)
