SUBDIRS = librygel-core librygel-renderer librygel-server librygel-db

if HAVE_GSTREAMER
SUBDIRS += librygel-renderer-gst
endif

EXTRA_DIST = doc-build.am \
			 meson.build \
			 librygel-core/meson.build \
			 librygel-server/meson.build \
			 librygel-renderer/meson.build \
			 librygel-db/meson.build \
			 librygel-renderer-gst/meson.build
